Fix layout on mobile

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -1,5 +1,7 @@
 .post-wrap {
-    display: flex;
+    @media only screen and (min-width: 60em) {
+        display: flex;
+    }
 }
 
 .post-body {
@@ -13,10 +15,14 @@
 
 .sidebar {
     display: block;
+    
+    @media only screen and (max-width: 60em) {
+        padding-bottom: 3em;
+    }
 }
 
 .textpost {
-    padding-bottom: 5em;
+    padding-bottom: 5em;    
 }
 
 blockquote {
@@ -25,5 +31,8 @@ blockquote {
     font-style: italic;
     font-size: 2.5rem;
     color: #808080;    
-    padding-bottom: 3em;
+    
+    @media only screen and (min-width: 60em) {
+        padding-bottom: 3em;        
+    }
 }
